--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,27 @@
-
 <div style="text-align:center">
-    <h1>
-      Welcome to {{ title }}
-    </h1>
+  <h1>
+    Welcome to {{ title }}
+  </h1>
 </div>
 
 <div>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
-      <div class="container"><a class="navbar-brand" href="#">My Music<br></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-              <div class="collapse navbar-collapse" id="navcol-1">
-                  <ul class="nav navbar-nav mr-auto">
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gcu.edu" target="_blank">GCU Home Page</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" [routerLink]="['/create']">Create Album</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" routerLink="" (click)="displayArtistList()">Artist List</a></li>
-                  </ul>
-                  <span class="navbar-text actions"><a class="btn btn-light action-button" role="button" href="#" (click)="displayVersion()">About</a></span>
-              </div>
-        </div>
-    </nav>
-  </div>
+  <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
+    <div class="container"><a class="navbar-brand" href="#">My Music<br></a><button class="navbar-toggler"
+        data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+          class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navcol-1">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gcu.edu" target="_blank">GCU
+              Home Page</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" [routerLink]="['/create']">Create Album</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" routerLink=""
+              (click)="displayArtistList()">Artist List</a></li>
+        </ul>
+        <span class="navbar-text actions"><a class="btn btn-light action-button" role="button" href="#"
+            (click)="displayVersion()">About</a></span>
+      </div>
+    </div>
+  </nav>
+</div>
 
 <router-outlet></router-outlet>
